# openDelivery

./: .gitignore  README.md  start_heartbeat_slam_nav.sh  start_rtabmap_mapping.sh  start_web_stack.sh
.cursor/agents/: obsidian-notes.md  readme-writer.md  ros-fake-simulate.md  ros-robot-packages.md  web-backend-ros.md  web-frontend.md
.cursor/rules/: openDelivery-subagent-delegation.mdc
backend/: gazebo_set_state_client.py  robot_lifecycle.py  ros_command_queue.py  ros_map_store.py  ros_robot_status_store.py  ros_sensor_store.py  ros_tf_bridge.py  server.py
backend/data/: robot_status_last.json
backend/tests/: test_robot_lifecycle.py
params/: startup.launch.py
params/launch/fake/: fake_pub.launch.py
params/launch/simulate/: simulate.launch.py  test.launch.py
params/launch/simulate/simulate/: simulate.launch.py
params/launch/system/: heartbeat.launch.py
scripts/: clone_navigation2.sh
src/: .clang-format  .clang-format-ignore  README.md
src/common/custom_msgs_srvs/: CMakeLists.txt  package.xml
src/common/custom_msgs_srvs/msg/: LocalizeNavCommand.msg  RobotStatus.msg
src/common/custom_msgs_srvs/srv/: SetHeartbeatParams.srv  SetRobotTask.srv
src/fake/scripts/: fake_pub.py
src/navigation/: README.md
src/navigation/nav_bringup/: CMakeLists.txt  README.md  package.xml
src/navigation/nav_bringup/config/: nav2_params.yaml
src/navigation/nav_bringup/launch/: navigation_namespaced.launch.py  stack.launch.py
src/open_delivery_rtabmap/: CMakeLists.txt  package.xml
src/open_delivery_rtabmap/config/: rtabmap_2d_laser.yaml
src/open_delivery_rtabmap/launch/: mapping.launch.py
src/open_delivery_rtabmap/scripts/: map_open_delivery.sh  save_map_open_delivery.sh
src/simulate/: README.md
src/simulate/simulate/: CMakeLists.txt  README.md  package.xml
src/simulate/simulate/launch/: headless_sim.launch.py  simulate.launch.py  test.launch.py
src/simulate/simulate/model/drawn_model/: map.stl  model.config  model.sdf  readme
src/simulate/simulate/urdf/: simple_2d_robot.urdf.xacro
src/simulate/simulate/worlds/: drawn_model.world  empty.world
src/slam/slam_bringup/: CMakeLists.txt  package.xml
src/slam/slam_bringup/config/: localization_params.yaml  mapper_params.yaml
src/slam/slam_bringup/launch/: localization.launch.py  mapping.launch.py
src/slam/slam_bringup/src/: managed_slam_lifecycle.cpp
src/system/heartbeat/: CMakeLists.txt  package.xml
src/system/heartbeat/include/heartbeat/: heartbeat_node.hpp
src/system/heartbeat/launch/: heartbeat.launch.py  test.launch.py
src/system/heartbeat/src/: heartbeat_node.cpp  main.cpp
src/system/manager/: CMakeLists.txt  package.xml
src/system/manager/include/manager/: health_monitor_node.hpp  task_manager_node.hpp
src/system/manager/launch/: manager.launch.py
src/system/manager/src/: health_monitor_node.cpp  task_manager_node.cpp
src/system/open_delivery_system/: CMakeLists.txt  package.xml
src/system/open_delivery_system/launch/: debug_include_startup.launch.py  debug_test_stack.launch.py
src/system/open_delivery_system/scripts/: sim_bringup.sh  sim_shutdown.sh  start_open_delivery.sh
src/system/system/: CMakeLists.txt  package.xml
src/system/system/launch/: debug_include_startup.launch.py  debug_test_stack.launch.py
src/system/system/scripts/: sim_bringup.sh  start_open_delivery.sh
web/: app.js  index.html  styles.css
