<?xml version="1.0"?>
<package format="3">
  <name>simulate</name>
  <version>0.0.1</version>
  <description>Minimal 2D robot simulation with lidar, imu, odom and front camera.</description>
  <maintainer email="dev@example.com">openDelivery</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
