<?xml version="1.0"?>
<package format="3">
  <name>slam_bringup</name>
  <version>0.0.1</version>
  <description>Simple slam_toolbox mapping and localization bringup.</description>
  <maintainer email="dev@example.com">openDelivery</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>slam_toolbox</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
