<?xml version="1.0"?>
<package format="3">
  <name>heartbeat</name>
  <version>0.0.1</version>
  <description>Publishes RobotStatus heartbeat on /{robot_name}/robot_status; runtime tuning via SetHeartbeatParams service.</description>
  <maintainer email="dev@example.com">openDelivery</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>custom_msgs_srvs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
